[package]
name = "pallet-rewards"
version = "2.8.0"
authors = ["Wei Tang <wei@that.world>"]
license = "GPL-3.0-or-later"
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "3.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.0", default-features = false, features = ["derive"] }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate" }
sp-inherents = { default-features = false, git = "https://github.com/paritytech/substrate" }
sp-consensus-pow = { default-features = false, git = "https://github.com/paritytech/substrate" }
sp-consensus-poscan = { package = "sp-consensus-poscan", default-features = false, path = "../../primitives/consensus/poscan" }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate" }

rewards-api = { default-features = false, path = "../../traits/rewards" }

# Benchmarking
frame-benchmarking = { default-features = false, optional = true, git = "https://github.com/paritytech/substrate" }

[dev-dependencies]
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate" }

[dependencies.log]
default-features = false
version = '0.4.17'

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"scale-info/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-inherents/std",
	"sp-consensus-pow/std",
	"frame-support/std",
	"frame-system/std",
	"sp-consensus-poscan/std",
	"rewards-api/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
]
