[package]
name = "pallet-rewards"
version = "2.8.0"
authors = ["Wei Tang <wei@that.world>"]
license = "GPL-3.0-or-later"
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "3.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.0", default-features = false, features = ["derive"] }
sp-arithmetic = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7" }
sp-inherents = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7" }
sp-consensus-pow = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7" }
sp-consensus-poscan = { package = "sp-consensus-poscan", default-features = false, path = "../../primitives/consensus/poscan" }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7" }
pallet-treasury = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7" }
pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7" }

rewards-api = { default-features = false, path = "../../traits/rewards" }
validator-set-api = { default-features = false, path = "../../traits/validator-set" }
mining-pool-stat-api = { default-features = false, path = "../../traits/mining-pool" }

# Benchmarking
frame-benchmarking = { default-features = false, optional = true, git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7" }

[dev-dependencies]
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7" }

[dependencies.log]
default-features = false
version = '0.4.17'

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"scale-info/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-inherents/std",
	"sp-consensus-pow/std",
	"frame-support/std",
	"frame-system/std",
	"sp-consensus-poscan/std",
	"rewards-api/std",
	"validator-set-api/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
]
