[package]
name = 'pallet-validator-set'
version = '0.9.22'
authors = ['Gautam Dhameja <quasijatt@outlook.com>']
edition = '2021'
license = 'Apache-2.0'
repository = 'https://github.com/gautamdhameja/substrate-validator-set'

[dev-dependencies.serde]
features = ['derive']
version = '1.0.126'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sp-staking]
default-features = false
git = 'https://github.com/paritytech/substrate.git'

[dependencies.log]
default-features = false
version = '0.4.17'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '3.1'

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
optional = true

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'

[dependencies.pallet-session]
default-features = false
features = ['historical']
git = 'https://github.com/paritytech/substrate.git'

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '2.1.1'

[dependencies.rewards-api]
default-features = false
path = "../../traits/rewards"

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
    'codec/std',
    'frame-benchmarking/std',
    'frame-support/std',
    'frame-system/std',
    'scale-info/std',
    'sp-core/std',
    'sp-io/std',
    'sp-std/std',
    'sp-runtime/std',
    'pallet-session/std',
    'rewards-api/std',
]
try-runtime = ['frame-support/try-runtime']