[package]
name = "pallet-evm-precompile-balances-erc20"
authors = [ "PureStake" ]
description = "A Precompile to expose a Balances pallet through an ERC20-compliant interface."
edition = "2021"
version = "0.1.0"

[dependencies]
log = "0.4"
num_enum = { version = "0.5.3", default-features = false }
paste = "1.0.6"
slices = "0.2.0"

# Moonbeam
precompile-utils = { path = "../utils", default-features = false }

# Substrate
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [ "max-encoded-len" ] }
frame-support = { git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7", default-features = false }

# Frontier
fp-evm = { version = "3.0.0-dev", path = "../../primitives/evm", default-features = false }
pallet-evm = { path = "../../pallets/evm", default-features = false, features = [ "forbid-evm-reentrancy" ] }


[features]
default = [ "std" ]
std = [
	"codec/std",
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-timestamp/std",
	"pallet-evm/std",
	"precompile-utils/std",
	"sp-core/std",
	"sp-io/std",
	"sp-std/std",
]
